- Added mouse wheel zoom in functionality

--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -138,6 +138,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="TurnRate",Scale=1.000000,Key=MagicLeap_Left_Trackpad_X)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="Look Up",Scale=-1.000000,Key=MouseY)
++AxisMappings=(AxisName="Zoom",Scale=1.000000,Key=MouseWheelAxis)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=None
